--- a/FrontEnd/src/app/Administrador/gestion-tipo-equipos/gestion-tipo-equipos.component.css
+++ b/FrontEnd/src/app/Administrador/gestion-tipo-equipos/gestion-tipo-equipos.component.css
@@ -7,23 +7,23 @@
 .letras{
   margin-left: 10px;
 }
+
 .container{
-  width: 100%;
-  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+
 }
 
 .margen{
   margin-top: 10px;
-  margin-left: 30px;
-  width: 200px;
-}
-
-.margnes{
-  margin-left: 5%;
-  margin-top: 10px;
-  border-radius: 50px;
+  width: 150px;
 }
 .modal{
   background: linear-gradient(65deg, #000000, #641303);
 }
 
+.card{
+  min-height: 250px;
+  margin-bottom: 20px;
+}
