--- a/FrontEnd/src/app/Dashboard/asociacion-productos/asociacion-productos.component.css
+++ b/FrontEnd/src/app/Dashboard/asociacion-productos/asociacion-productos.component.css
@@ -1,53 +1,65 @@
 .contenerDeInformacion{
-    margin-left: 15%;
-    margin-top: 5vh;
-    width: 70%;
-    height: 16vh;
-  }
-  
-  .container{
-    margin-top: 5vh;
-    background: #641303;
-    color: white;
-    padding: 20px;
-    border-radius: 20px
-  ;
-  }
-  img {
-    width: 230px;
-  }
-  
-  .image2{
-    width: 150px;
-  }
-  
-  .tamano{
-    width: 50px;
-    height: 25px;
-    margin-left: 170px;
-  }
-  .btn2{
-    margin-top: 80px;
-    border-radius: 5px;
-  
-  }
-  
-  .largo{
-    width: 70%;
-    margin-left: 15%;
-    margin-top: 10px;
-    border-radius: 20px;
-  }
-  
-  .list-group{
-    width: 100%;
-    height: 50%;
-    /* max-height: 200px;
-    margin-bottom: 10px; */
-    overflow-y: scroll;
-    box-sizing: content-box; /* So the width will be 100% + 17px */
+  margin-left: 15%;
+  margin-top: 5vh;
+  width: 70%;
+  height: 16vh;
 }
 
-.list-group::-webkit-scrollbar {
-    display: none;
-  }
+.container{
+  margin-top: 5vh;
+  background: #641303;
+  color: white;
+  padding: 20px;
+  border-radius: 20px
+;
+}
+img {
+  width: 230px;
+}
+
+.image2{
+  width: 150px;
+}
+
+.tamano{
+  width: 50px;
+  height: 25px;
+  margin-left: 170px;
+}
+.btn2{
+  margin-top: 70px;
+  border-radius: 5px;
+}
+.btn3{
+  margin-top: 5px;
+  border-radius: 5px;
+
+}
+
+.largo{
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 10px;
+  border-radius: 20px;
+}
+
+.modal{
+  background: linear-gradient(65deg, #000000, #641303);
+}
+.list-group-item {
+  border-color:transparent ;
+  border-radius: 30px;
+  padding: 1px;
+  font: 10px;
+  margin: 2px;
+  background: linear-gradient(65deg, #e4b0b2   , #f0858a   ) ;
+  color: #293233;
+}
+
+.list-group-item:hover {
+  background: linear-gradient(65deg, #be9395   , #c76e72   ) ;
+}
+button {
+  background: transparent ;
+
+}
