--- a/FrontEnd/src/app/Dashboard/asociacion-productos/asociacion-productos.component.html
+++ b/FrontEnd/src/app/Dashboard/asociacion-productos/asociacion-productos.component.html
@@ -1,7 +1,7 @@
 <div class="contenedorPantalla">
 
-    <div class="container">
-        <div class="row" *ngFor="let asociacion of superLista">
+    <div class="container" *ngFor="let asociacion of superLista">
+        <div class="row" >
 
             <div class="col columna1">
                 <img src={{asociacion.Sucursal.imagen}}>
