--- a/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.css
+++ b/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.css
@@ -1,124 +1,66 @@
-body,html{
-    background: linear-gradient(45deg, #293233   , #1F393A  );
-    align-content: center;
-    
-    }
-    
-    h6, h5, h4, h3, h2, h1, p{
-      text-align: left;
-      color: white ;
-      margin-left: 5%;
-    }
-    
-    p{
-      text-align: left;
-      width: 75%;
-      margin-left: 12.5%;
-      margin-top: 5%;
-      border-top: solid;
-      padding-top: 10px;
-      border-top-width: 2px;
-      border-top-color: #293233;
-      color: #293233;
-      font-size: 12px;
-    }
-    
-    
-    input{
-      border:none;
-      background-color: transparent;
-      color: #293233 ;
-      font:  12px;
-    }
-    
-    input::placeholder{
-      color: #293233 ;
-    }
-    
-    input:focus,
-    select:focus,
-    textarea:focus,
-    button:focus,
-    select:focus {
-        background-color: transparent;
-        border: transparent;
-        outline: transparent;
-    
-    }
-    
-    .container{
-      position: absolute;
-      left: 27.5%;
-      width: 50%; 
-      padding: 3%;
-      /* box-shadow: 1px 8px 8px 0px rgba(196, 206, 141, 0.3); */
-    }
-    
-    .input-group{
-      border-color:transparent ;
-      border-radius: 30px;
-      padding: 5px;
-      margin: 20px;
-      padding-left: 30px;
-      background: linear-gradient(45deg, #d9f0e6   , #daffef   ) ;
-      color: #293233;
-      box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
-      width: 75%;
-      
-  
-    }
-    
-    label{
-      margin-top: 5px;
-    }
-  
-    button {
-      border-color:transparent ;
-      border-radius: 30px;
-      padding: 5px;
-      margin: 20px;
-      background: linear-gradient(65deg, #d8353d   , #f04b53   ) ;
-      color: #293233;
-      box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
-      width: 75%;
-    }
-    
-    .marginLeft{
-      margin-left: 5%;
-      color: #293233;
-      padding-bottom: 2%;
-      font-size: 15px
-    }
-    
-    .marginRight{
-      margin-right: 5%;
-      color: #293233;
-      padding-bottom: 2%;
-      font-size: 15px
-    }
-    
-    .marginRight:hover{
-      color: #F5881F;
-    }
-    
-    .logo{
-      margin-top:5%;
-      width: 45%;
-      margin-left: 27.5%;
-    }
-    
-    .InfoContainer{
-      position: absolute;
-        background: linear-gradient(45deg, #C4CE8D   , #535831  ) ;
-        border-top-right-radius: 50px;
-        border-bottom-right-radius: 50px;
-        border-left-style: solid;
-        border-left-width: 10px;
-        border-left-color: #1F393A;
-        /*dim the background*/
-        top:0;
-        left:50%;
-        width:50%;
-        height:100%;
-      
-    }
+.contenerDeInformacion{
+  margin-left: 5%;
+  margin-top: 5vh;
+  width: 90%;
+  height: 16vh;
+}
+
+.container{
+  margin-top: 5vh;
+  background: #641303;
+  color: white;
+  padding: 20px;
+  border-radius: 20px
+;
+}
+img {
+  width: 230px;
+}
+
+.image2{
+  width: 150px;
+}
+
+.tamano{
+  width: 50px;
+  height: 25px;
+  margin-left: 170px;
+}
+.btn2{
+  margin-top: 70px;
+  border-radius: 5px;
+}
+.btn3{
+  margin-top: 5px;
+  border-radius: 5px;
+
+}
+
+.largo{
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 10px;
+  border-radius: 20px;
+}
+
+.modal{
+  background: linear-gradient(65deg, #000000, #641303);
+}
+
+.list-group-item {
+  border-color:transparent ;
+  border-radius: 30px;
+  padding: 1px;
+  font: 10px;
+  margin: 2px;
+  background: linear-gradient(65deg, #e4b0b2   , #f0858a   ) ;
+  color: #293233;
+}
+
+.list-group-item:hover {
+  background: linear-gradient(65deg, #be9395   , #c76e72   ) ;
+}
+button {
+  background: transparent ;
+
+}
