--- a/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.html
+++ b/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.html
@@ -1,7 +1,7 @@
-<div class="contenedorPantalla">
+<div class="contenerDeInformacion">
 
-    <div class="container">
-        <div class="row" *ngFor="let asociacion of superLista">
+    <div class="container"  *ngFor="let asociacion of superLista">
+        <div class="row">
 
             <div class="col columna1">
                 <img src={{asociacion.Sucursal.imagen}}>
@@ -20,8 +20,8 @@
                 <div class="list-group" *ngFor="let tratamiento of asociacion.tratamientos">
                     <a class="list-group-item list-group-item-action active">
                         <button href="#" type="button" class="btn" data-bs-toggle="modal"
-                        (click)="borrarTratamiento(tratamiento, asociacion.Sucursal)"    
-                        data-bs-target="#DesacocieModal">
+                            (click)="borrarTratamiento(tratamiento, asociacion.Sucursal)"
+                            data-bs-target="#DesacocieModal">
                             {{tratamiento.nombre}}
                         </button>
                     </a>
@@ -46,42 +46,46 @@
         </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="DesacocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title" id="eliminarFilaLabel">Desasociar un Tratamiento</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Se eliminará el tratamiento: {{this.tratamientoModal.nombre}} de la sucursal
-                        {{this.sucursalModal.nombre}} ¿Deseas continuar?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="DesacocieTratamiento()">Aceptar</button>
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="AsocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title" id="eliminarFilaLabel">Asociar un Tratamiento</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Se agregará el tratamiento: {{this.tratamientoModal.nombre}} a la sucursal
-                        {{this.sucursalModal.nombre}} ¿Deseas continuar?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="asociarTratamiento()">Aceptar</button>
-                </div>
+<!-- Modal -->
+<div class="modal fade" id="DesacocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="eliminarFilaLabel">Desasociar un Tratamiento</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Se eliminará el tratamiento: {{this.tratamientoModal.nombre}} de la sucursal
+                    {{this.sucursalModal.nombre}} ¿Deseas continuar?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="DesacocieTratamiento()">Aceptar</button>
             </div>
         </div>
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="AsocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="eliminarFilaLabel">Asociar un Tratamiento</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Se agregará el tratamiento: {{this.tratamientoModal.nombre}} a la sucursal
+                    {{this.sucursalModal.nombre}} ¿Deseas continuar?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="asociarTratamiento()">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
