--- a/FrontEnd/src/app/Dashboard/crear-clase/crear-clase.component.html
+++ b/FrontEnd/src/app/Dashboard/crear-clase/crear-clase.component.html
@@ -13,7 +13,7 @@
                     
                     <select class="form-select input-group" id="tipo" [(ngModel)]="clase.idServicio" [ngModelOptions]="{standalone: true}" name="tipo" required>
                         <!-- <optgroup label=""> -->
-                        <option *ngFor="let tipo of tiposClase" value="{{tipo.id}}"> {{tipo.nombre}}</option>
+                        <option *ngFor="let tipo of tiposClase" value="{{tipo.id}}"> {{tipo.nombre}} - Sucursal {{tipo.idSucursal}} </option>
                         <!-- </optgroup> -->
                     </select>
                 </div>
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <select class="form-select input-group" id="instructor" [(ngModel)]="clase.idEmpleado" name="instructor" required>
                         <!-- <optgroup label=""> -->
-                        <option *ngFor="let instructor of instructores" value="{{instructor.cedula}}"> {{instructor.nombre}}</option>
+                        <option *ngFor="let instructor of instructores" value="{{instructor.cedula}}"> {{instructor.nombre}} - Sucursal {{instructor.idSucursal}}</option>
                         <!-- </optgroup> -->
                     </select>
                 </div>
@@ -56,12 +56,12 @@
 
                 <div class="form-group input-group">
                     <label for="inicio">Hora de inicio</label>
-                    <input type="time" name="inicio" class="form-control" [(ngModel)]="clase.horaInicio" id="inicio"
+                    <input type="time" step="3600" name="inicio" class="form-control" [(ngModel)]="clase.horaInicio" id="inicio"
                         placeholder="Inicio">
                 </div>
                 <div class="form-group input-group">
                     <label for="final">Hora final</label>
-                    <input type="time" name="final" class="form-control" [(ngModel)]="clase.horaFin" id="final"
+                    <input type="time" step="3600" name="final" class="form-control" [(ngModel)]="clase.horaFin" id="final"
                         placeholder="Final">
                 </div>
 
