--- a/FrontEnd/src/app/Administrador/navbar/navbar.component.html
+++ b/FrontEnd/src/app/Administrador/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
 
       <img src="https://media.discordapp.net/attachments/824372507015643159/847678323861487616/Asset_54x-8.png?width=457&height=676">
-      <label class="navbar-brand">Tipo de Administrador</label>
+      <label class="navbar-brand">{{puesto.nombre}}</label>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,9 +65,11 @@
               <li><a class="dropdown-item btn" (click)="navigate('AsociacionInventario')"> Asociación de inventario</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item btn" (click)="navigate('CrearClase')" >Crear clases</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item btn" (click)="navigate('Calendario')" >Calendario</a></li>
             </ul>
           </li>
-          <button class="btn btnSalir">
+          <button class="btn btnSalir" (click)="salrir()">
             Salir
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
